# smart-memory-mcp-v2

./: .clinerules-ask  .clinerules-code  .clinerules-debug  .clinerules-test  .gitignore  .gitmodules  README.md  development-guidelines.md  github-workflows.md  license.md  package-lock.json  package.json  smart-memory-mcp-integration-plan.md  test-memory.js  test-umb.js
.github/: labeler.yml  pull_request_template.md
.smart-memory/: config.json
client/: Cargo.toml
core/: Cargo.toml  README.md  backup-fix.rs  build-fix.rs  build.rs  logging-fix.rs  version-fix.rs
core/src/: crash_recovery.rs  logging.rs  main.rs  mod.rs  parent_process_monitor.rs  server_manager.rs  version.rs
core/src/proto/: smart_memory.rs
core/src/service/: health_service.rs  memory_service.rs  mod.rs
core/src/storage/: backup.rs  memory.rs  memory_bank_config.rs  mod.rs  tokenizer.rs
core/src/storage/context/: mod.rs  optimizer.rs  relevance.rs
core/src/storage/db/: mod.rs  repository.rs  schema.rs
docs/: README.md  building-vsix.md  cross-platform-usage.md  deployment-guide.md  installation-guide.md  production-deployment.md  quick-start-guide.md  server-shutdown-handling.md  simplified-implementation-plan.md  smart-memory-mcp-integration.md  troubleshooting-guide.md
extension/: INSTALLATION.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
proto/: smart_memory.proto
scripts/: README.md  build-cross-platform.js  build-extension.js  cleanup-orphaned-servers.js  cleanup.ps1  cleanup.sh  copy-install-scripts.js  install.ps1  setup-github-complete.js  (+3 more)
(+57 files in other folders)
