[package]
name = "smart-memory-mcp-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11"
prost = "0.12"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokenizers = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
nix = "0.26"
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "winnt"] }

[build-dependencies]
tonic-build = "0.11"
